--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.3",
     "antd": "^4.21.4",
     "axios": "^0.27.2",
+    "babel-plugin-macros": "^3.1.0",
+    "chart.js": "^3.9.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.2",
