--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
     "chart.js": "^3.9.1",
+    "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-highlight-words": "^0.18.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "sweetalert2": "^11.4.19"
