--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
     "chart.js": "^3.9.1",
+    "date-fns": "^2.29.2",
     "moment": "^2.29.4",
     "react": "^18.0.0",
+    "react-big-calendar": "^1.5.0",
     "react-dom": "^18.0.0",
     "react-highlight-words": "^0.18.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
-    "sweetalert2": "^11.4.19"
+    "sweetalert2": "^11.4.29"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
