--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-highlight-words": "^0.18.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
+    "socket.io-client": "^4.5.4",
     "sweetalert2": "^11.4.29"
   },
   "devDependencies": {
