--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "socket.io-client": "^4.5.4",
-    "sweetalert2": "^11.4.29"
+    "sweetalert2": "^11.4.29",
+    "vite-plugin-svgr": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
